--- a/image-position-test/css/position.css
+++ b/image-position-test/css/position.css
@@ -12,3 +12,12 @@
     margin: 0 auto;
     position: relative;
 }
+
+h1 {
+    color: #fff;
+    font-size: 120px;
+    text-shadow: 2px 3px 0 #000;
+    position: absolute;
+    bottom: 100px;
+    right: 100px;
+}
