--- a/flex-layout-test/flex-card-test/index.css
+++ b/flex-layout-test/flex-card-test/index.css
@@ -63,7 +63,26 @@ h1 {
     letter-spacing: 2px;
 }
 
+.card:hover {
+    background: linear-gradient(deepskyblue, white);
+}
+
+.card a:hover {
+    color: deepskyblue;
+}
+
 a {
     text-decoration: none;
     color: black;
+}
+
+@media screen and (min-width: 1024px) {
+    .row {
+        display: flex;
+    }
+
+    .column {
+        max-width: 33.33%;
+        padding: 0 2em;
+    }
 }
