--- a/grid-layout-test/index.css
+++ b/grid-layout-test/index.css
@@ -89,3 +89,38 @@ hr {
     /* grid-row: 3 / 4; */
 
 }
+
+#useTemplate {
+    grid-template-rows: repeat(3, 100px);
+    gap: 1em;
+    grid-template-areas:
+        "box1 box1 box1"
+        "box2 box3 box3"
+        "box2 box4 box5"
+    ;
+}
+
+#item1 {
+    background-color: blue;
+    grid-area: box1;
+}
+
+#item2 {
+    background-color: green;
+    grid-area: box2;
+}
+
+#item3 {
+    background-color: orange;
+    grid-area: box3;
+}
+
+#item4 {
+    background-color: yellow;
+    grid-area: box4;
+}
+
+#item5 {
+    background-color: red;
+    grid-area: box5;
+}
