--- a/grid-layout-test/grid-test/grid.css
+++ b/grid-layout-test/grid-test/grid.css
@@ -94,7 +94,7 @@ hr {
     grid-template-rows: repeat(3, 100px);
     gap: 1em;
     grid-template-areas:
-        "box1 box1 box1"
+        "item1 item1 item1"
         "box2 box3 box3"
         "box2 box4 box5"
     ;
@@ -102,7 +102,7 @@ hr {
 
 #item1 {
     background-color: blue;
-    grid-area: box1;
+    grid-area: item1;
 }
 
 #item2 {
